# vatiris

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
aip-crawler/: .prettierrc.json  package-lock.json  package.json
aip-crawler/src/: main.ts
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/data/: airports.csv
backend/migrations/: 001_create_tables.sql  002_aup_overrides.sql
backend/src/: auth.ts  db.ts  eaip-crawler.ts  server.ts
backend/src/aup/: fetcher.test.ts  fetcher.ts  parser-layout.ts  parser-modern.ts  parser.test.ts  parser.ts  service.ts  strikethrough.ts  topsky-areas-loader.ts  types.ts
backend/src/routes/: aup.ts  cdm.ts  data.ts  eaip.ts  esdata.ts  fsp.ts  smhi.ts  wiki.ts
backend/src/services/: aup-merge.ts  aup.ts
euroscope-plugin/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
euroscope-plugin/scripts/: build.sh
euroscope-plugin/src/: Version.h.in  main.cpp  plugin.cpp  plugin.h  postjson.cpp  postjson.h
frontend/: .env.development  .env.production  .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  cdmPrefill.ts  constants.ts  eventbus.ts  flightcalc.ts  main.ts  metcommon.ts  router.ts  sid.ts
frontend/src/assets/: main.css
lfvuseplan/: beta.php  composer.json  index.php
scripts/: deploy-backend.sh  deploy-frontend.sh  deploy.sh  generate-quickref-images.sh  generate-stands.py  vatiris-backend.service
src/: App.vue  main.ts  router.ts
src/assets/: main.css
src/components/: About.vue  Iframe.vue  Image.vue  LfvEcharts.vue  Metreport.vue  Metsensor.vue  Notam.vue  NotamItem.vue  Smhi.vue  Welcome.vue  Wiki.vue  Window.vue  Wx.vue
src/stores/: notam.ts  preset.ts  vatsim.ts  windows.ts  wx.ts
src/styles/: settings.scss
src/views/: Main.vue
(+144 files in other folders)
